###############################################################################
#   Set shims root directory.
###############################################################################
set(SHIMS_ROOT ${shimmer_SOURCE_DIR}/shims)


###############################################################################
#   Build SDL2 shim.
###############################################################################
add_subdirectory(sdl2)
