###############################################################################
#   Build SDL shim.
###############################################################################
add_subdirectory(sdl)


###############################################################################
#   Build SDL2 shim.
###############################################################################
add_subdirectory(sdl2)
