###############################################################################
#   Find and store SDL2 paths.
###############################################################################
find_package(SDL2)


###############################################################################
#   Set SDL2 shim include directory.
###############################################################################
set( SDL2_SHIM_INCLUDE_DIR ${SHIMS_ROOT}/sdl2/includes )


###############################################################################
#   Find all header files for SDL2 shim.
###############################################################################
file(GLOB_RECURSE HEADERS ${SDL2_SHIM_INCLUDE_DIR}/*.h)


###############################################################################
#   Set include directories.
###############################################################################
set( INCLUDES
        ${LIB_SHIMMER_ROOT}/includes
        ${SDL2_INCLUDE_DIRS}
        ${SDL2_SHIM_INCLUDE_DIR} )

include_directories(${INCLUDES})


###############################################################################
#   Set sources.
###############################################################################
set( SOURCES
        sources/event.cpp
        sources/mouse.cpp
        sources/shim.cpp
        sources/video.cpp)


###############################################################################
#   Build shim library.
###############################################################################
add_library(shimmer_sdl2 SHARED ${SOURCES} ${HEADERS})
target_link_libraries(shimmer_sdl2 shimmer ${ALL_OPENGL_LIBRARIES})


###############################################################################
#   Build example programs.
###############################################################################
add_subdirectory( examples )
